downloaded_docs/lightweight-charts/docs/3.8/api.md
Version: 3.8

On this page

## Enumerations[​](#enumerations "Direct link to Enumerations")

* [ColorType](/lightweight-charts/docs/3.8/api/enumerations/ColorType)
* [CrosshairMode](/lightweight-charts/docs/3.8/api/enumerations/CrosshairMode)
* [LastPriceAnimationMode](/lightweight-charts/docs/3.8/api/enumerations/LastPriceAnimationMode)
* [LineStyle](/lightweight-charts/docs/3.8/api/enumerations/LineStyle)
* [LineType](/lightweight-charts/docs/3.8/api/enumerations/LineType)
* [PriceLineSource](/lightweight-charts/docs/3.8/api/enumerations/PriceLineSource)
* [PriceScaleMode](/lightweight-charts/docs/3.8/api/enumerations/PriceScaleMode)
* [TickMarkType](/lightweight-charts/docs/3.8/api/enumerations/TickMarkType)
* [TrackingModeExitMode](/lightweight-charts/docs/3.8/api/enumerations/TrackingModeExitMode)

## Interfaces[​](#interfaces "Direct link to Interfaces")

* [AreaStyleOptions](/lightweight-charts/docs/3.8/api/interfaces/AreaStyleOptions)
* [AutoScaleMargins](/lightweight-charts/docs/3.8/api/interfaces/AutoScaleMargins)
* [AutoscaleInfo](/lightweight-charts/docs/3.8/api/interfaces/AutoscaleInfo)
* [AxisPressedMouseMoveOptions](/lightweight-charts/docs/3.8/api/interfaces/AxisPressedMouseMoveOptions)
* [BarData](/lightweight-charts/docs/3.8/api/interfaces/BarData)
* [BarPrices](/lightweight-charts/docs/3.8/api/interfaces/BarPrices)
* [BarStyleOptions](/lightweight-charts/docs/3.8/api/interfaces/BarStyleOptions)
* [BarsInfo](/lightweight-charts/docs/3.8/api/interfaces/BarsInfo)
* [BaseValuePrice](/lightweight-charts/docs/3.8/api/interfaces/BaseValuePrice)
* [BaselineStyleOptions](/lightweight-charts/docs/3.8/api/interfaces/BaselineStyleOptions)
* [BusinessDay](/lightweight-charts/docs/3.8/api/interfaces/BusinessDay)
* [CandlestickData](/lightweight-charts/docs/3.8/api/interfaces/CandlestickData)
* [CandlestickStyleOptions](/lightweight-charts/docs/3.8/api/interfaces/CandlestickStyleOptions)
* [ChartOptions](/lightweight-charts/docs/3.8/api/interfaces/ChartOptions)
* [CrosshairLineOptions](/lightweight-charts/docs/3.8/api/interfaces/CrosshairLineOptions)
* [CrosshairOptions](/lightweight-charts/docs/3.8/api/interfaces/CrosshairOptions)
* [GridLineOptions](/lightweight-charts/docs/3.8/api/interfaces/GridLineOptions)
* [GridOptions](/lightweight-charts/docs/3.8/api/interfaces/GridOptions)
* [HandleScaleOptions](/lightweight-charts/docs/3.8/api/interfaces/HandleScaleOptions)
* [HandleScrollOptions](/lightweight-charts/docs/3.8/api/interfaces/HandleScrollOptions)
* [HistogramData](/lightweight-charts/docs/3.8/api/interfaces/HistogramData)
* [HistogramStyleOptions](/lightweight-charts/docs/3.8/api/interfaces/HistogramStyleOptions)
* [IChartApi](/lightweight-charts/docs/3.8/api/interfaces/IChartApi)
* [IPriceFormatter](/lightweight-charts/docs/3.8/api/interfaces/IPriceFormatter)
* [IPriceLine](/lightweight-charts/docs/3.8/api/interfaces/IPriceLine)
* [IPriceScaleApi](/lightweight-charts/docs/3.8/api/interfaces/IPriceScaleApi)
* [ISeriesApi](/lightweight-charts/docs/3.8/api/interfaces/ISeriesApi)
* [ITimeScaleApi](/lightweight-charts/docs/3.8/api/interfaces/ITimeScaleApi)
* [KineticScrollOptions](/lightweight-charts/docs/3.8/api/interfaces/KineticScrollOptions)
* [LayoutOptions](/lightweight-charts/docs/3.8/api/interfaces/LayoutOptions)
* [LineData](/lightweight-charts/docs/3.8/api/interfaces/LineData)
* [LineStyleOptions](/lightweight-charts/docs/3.8/api/interfaces/LineStyleOptions)
* [LocalizationOptions](/lightweight-charts/docs/3.8/api/interfaces/LocalizationOptions)
* [MouseEventParams](/lightweight-charts/docs/3.8/api/interfaces/MouseEventParams)
* [OhlcData](/lightweight-charts/docs/3.8/api/interfaces/OhlcData)
* [Point](/lightweight-charts/docs/3.8/api/interfaces/Point)
* [PriceFormatBuiltIn](/lightweight-charts/docs/3.8/api/interfaces/PriceFormatBuiltIn)
* [PriceFormatCustom](/lightweight-charts/docs/3.8/api/interfaces/PriceFormatCustom)
* [PriceLineOptions](/lightweight-charts/docs/3.8/api/interfaces/PriceLineOptions)
* [PriceRange](/lightweight-charts/docs/3.8/api/interfaces/PriceRange)
* [PriceScaleMargins](/lightweight-charts/docs/3.8/api/interfaces/PriceScaleMargins)
* [PriceScaleOptions](/lightweight-charts/docs/3.8/api/interfaces/PriceScaleOptions)
* [Range](/lightweight-charts/docs/3.8/api/interfaces/Range)
* [SeriesDataItemTypeMap](/lightweight-charts/docs/3.8/api/interfaces/SeriesDataItemTypeMap)
* [SeriesMarker](/lightweight-charts/docs/3.8/api/interfaces/SeriesMarker)
* [SeriesOptionsCommon](/lightweight-charts/docs/3.8/api/interfaces/SeriesOptionsCommon)
* [SeriesOptionsMap](/lightweight-charts/docs/3.8/api/interfaces/SeriesOptionsMap)
* [SeriesPartialOptionsMap](/lightweight-charts/docs/3.8/api/interfaces/SeriesPartialOptionsMap)
* [SingleValueData](/lightweight-charts/docs/3.8/api/interfaces/SingleValueData)
* [SolidColor](/lightweight-charts/docs/3.8/api/interfaces/SolidColor)
* [TimeScaleOptions](/lightweight-charts/docs/3.8/api/interfaces/TimeScaleOptions)
* [TrackingModeOptions](/lightweight-charts/docs/3.8/api/interfaces/TrackingModeOptions)
* [VerticalGradientColor](/lightweight-charts/docs/3.8/api/interfaces/VerticalGradientColor)
* [WatermarkOptions](/lightweight-charts/docs/3.8/api/interfaces/WatermarkOptions)
* [WhitespaceData](/lightweight-charts/docs/3.8/api/interfaces/WhitespaceData)

## Type Aliases[​](#type-aliases "Direct link to Type Aliases")

* [AreaSeriesOptions](/lightweight-charts/docs/3.8/api/type-aliases/AreaSeriesOptions)
* [AreaSeriesPartialOptions](/lightweight-charts/docs/3.8/api/type-aliases/AreaSeriesPartialOptions)
* [AutoscaleInfoProvider](/lightweight-charts/docs/3.8/api/type-aliases/AutoscaleInfoProvider)
* [Background](/lightweight-charts/docs/3.8/api/type-aliases/Background)
* [BarPrice](/lightweight-charts/docs/3.8/api/type-aliases/BarPrice)
* [BarSeriesOptions](/lightweight-charts/docs/3.8/api/type-aliases/BarSeriesOptions)
* [BarSeriesPartialOptions](/lightweight-charts/docs/3.8/api/type-aliases/BarSeriesPartialOptions)
* [BaseValueType](/lightweight-charts/docs/3.8/api/type-aliases/BaseValueType)
* [BaselineSeriesOptions](/lightweight-charts/docs/3.8/api/type-aliases/BaselineSeriesOptions)
* [BaselineSeriesPartialOptions](/lightweight-charts/docs/3.8/api/type-aliases/BaselineSeriesPartialOptions)
* [CandlestickSeriesOptions](/lightweight-charts/docs/3.8/api/type-aliases/CandlestickSeriesOptions)
* [CandlestickSeriesPartialOptions](/lightweight-charts/docs/3.8/api/type-aliases/CandlestickSeriesPartialOptions)
* [Coordinate](/lightweight-charts/docs/3.8/api/type-aliases/Coordinate)
* [DeepPartial](/lightweight-charts/docs/3.8/api/type-aliases/DeepPartial)
* [HistogramSeriesOptions](/lightweight-charts/docs/3.8/api/type-aliases/HistogramSeriesOptions)
* [HistogramSeriesPartialOptions](/lightweight-charts/docs/3.8/api/type-aliases/HistogramSeriesPartialOptions)
* [HorzAlign](/lightweight-charts/docs/3.8/api/type-aliases/HorzAlign)
* [LineSeriesOptions](/lightweight-charts/docs/3.8/api/type-aliases/LineSeriesOptions)
* [LineSeriesPartialOptions](/lightweight-charts/docs/3.8/api/type-aliases/LineSeriesPartialOptions)
* [LineWidth](/lightweight-charts/docs/3.8/api/type-aliases/LineWidth)
* [Logical](/lightweight-charts/docs/3.8/api/type-aliases/Logical)
* [LogicalRange](/lightweight-charts/docs/3.8/api/type-aliases/LogicalRange)
* [LogicalRangeChangeEventHandler](/lightweight-charts/docs/3.8/api/type-aliases/LogicalRangeChangeEventHandler)
* [MouseEventHandler](/lightweight-charts/docs/3.8/api/type-aliases/MouseEventHandler)
* [Nominal](/lightweight-charts/docs/3.8/api/type-aliases/Nominal)
* [OverlayPriceScaleOptions](/lightweight-charts/docs/3.8/api/type-aliases/OverlayPriceScaleOptions)
* [PriceFormat](/lightweight-charts/docs/3.8/api/type-aliases/PriceFormat)
* [PriceFormatterFn](/lightweight-charts/docs/3.8/api/type-aliases/PriceFormatterFn)
* [SeriesMarkerPosition](/lightweight-charts/docs/3.8/api/type-aliases/SeriesMarkerPosition)
* [SeriesMarkerShape](/lightweight-charts/docs/3.8/api/type-aliases/SeriesMarkerShape)
* [SeriesOptions](/lightweight-charts/docs/3.8/api/type-aliases/SeriesOptions)
* [SeriesPartialOptions](/lightweight-charts/docs/3.8/api/type-aliases/SeriesPartialOptions)
* [SeriesType](/lightweight-charts/docs/3.8/api/type-aliases/SeriesType)
* [SizeChangeEventHandler](/lightweight-charts/docs/3.8/api/type-aliases/SizeChangeEventHandler)
* [TickMarkFormatter](/lightweight-charts/docs/3.8/api/type-aliases/TickMarkFormatter)
* [Time](/lightweight-charts/docs/3.8/api/type-aliases/Time)
* [TimeFormatterFn](/lightweight-charts/docs/3.8/api/type-aliases/TimeFormatterFn)
* [TimeRange](/lightweight-charts/docs/3.8/api/type-aliases/TimeRange)
* [TimeRangeChangeEventHandler](/lightweight-charts/docs/3.8/api/type-aliases/TimeRangeChangeEventHandler)
* [UTCTimestamp](/lightweight-charts/docs/3.8/api/type-aliases/UTCTimestamp)
* [VertAlign](/lightweight-charts/docs/3.8/api/type-aliases/VertAlign)
* [VisiblePriceScaleOptions](/lightweight-charts/docs/3.8/api/type-aliases/VisiblePriceScaleOptions)

## Functions[​](#functions "Direct link to Functions")

* [createChart](/lightweight-charts/docs/3.8/api/functions/createChart)
* [isBusinessDay](/lightweight-charts/docs/3.8/api/functions/isBusinessDay)
* [isUTCTimestamp](/lightweight-charts/docs/3.8/api/functions/isUTCTimestamp)
* [version](/lightweight-charts/docs/3.8/api/functions/version)

## References[​](#references "Direct link to References")

### LasPriceAnimationMode[​](#laspriceanimationmode "Direct link to LasPriceAnimationMode")

Renames and re-exports [LastPriceAnimationMode](/lightweight-charts/docs/3.8/api/enumerations/LastPriceAnimationMode)