downloaded_docs/lightweight-charts/docs/4.1/api.md
Version: 4.1

On this page

## Enumerations[​](#enumerations "Direct link to Enumerations")

* [ColorType](/lightweight-charts/docs/4.1/api/enumerations/ColorType)
* [CrosshairMode](/lightweight-charts/docs/4.1/api/enumerations/CrosshairMode)
* [LastPriceAnimationMode](/lightweight-charts/docs/4.1/api/enumerations/LastPriceAnimationMode)
* [LineStyle](/lightweight-charts/docs/4.1/api/enumerations/LineStyle)
* [LineType](/lightweight-charts/docs/4.1/api/enumerations/LineType)
* [MismatchDirection](/lightweight-charts/docs/4.1/api/enumerations/MismatchDirection)
* [PriceLineSource](/lightweight-charts/docs/4.1/api/enumerations/PriceLineSource)
* [PriceScaleMode](/lightweight-charts/docs/4.1/api/enumerations/PriceScaleMode)
* [TickMarkType](/lightweight-charts/docs/4.1/api/enumerations/TickMarkType)
* [TrackingModeExitMode](/lightweight-charts/docs/4.1/api/enumerations/TrackingModeExitMode)

## Interfaces[​](#interfaces "Direct link to Interfaces")

* [AreaData](/lightweight-charts/docs/4.1/api/interfaces/AreaData)
* [AreaStyleOptions](/lightweight-charts/docs/4.1/api/interfaces/AreaStyleOptions)
* [AutoScaleMargins](/lightweight-charts/docs/4.1/api/interfaces/AutoScaleMargins)
* [AutoscaleInfo](/lightweight-charts/docs/4.1/api/interfaces/AutoscaleInfo)
* [AxisDoubleClickOptions](/lightweight-charts/docs/4.1/api/interfaces/AxisDoubleClickOptions)
* [AxisPressedMouseMoveOptions](/lightweight-charts/docs/4.1/api/interfaces/AxisPressedMouseMoveOptions)
* [BarData](/lightweight-charts/docs/4.1/api/interfaces/BarData)
* [BarStyleOptions](/lightweight-charts/docs/4.1/api/interfaces/BarStyleOptions)
* [BarsInfo](/lightweight-charts/docs/4.1/api/interfaces/BarsInfo)
* [BaseValuePrice](/lightweight-charts/docs/4.1/api/interfaces/BaseValuePrice)
* [BaselineData](/lightweight-charts/docs/4.1/api/interfaces/BaselineData)
* [BaselineStyleOptions](/lightweight-charts/docs/4.1/api/interfaces/BaselineStyleOptions)
* [BusinessDay](/lightweight-charts/docs/4.1/api/interfaces/BusinessDay)
* [CandlestickData](/lightweight-charts/docs/4.1/api/interfaces/CandlestickData)
* [CandlestickStyleOptions](/lightweight-charts/docs/4.1/api/interfaces/CandlestickStyleOptions)
* [ChartOptionsBase](/lightweight-charts/docs/4.1/api/interfaces/ChartOptionsBase)
* [ChartOptionsImpl](/lightweight-charts/docs/4.1/api/interfaces/ChartOptionsImpl)
* [CrosshairLineOptions](/lightweight-charts/docs/4.1/api/interfaces/CrosshairLineOptions)
* [CrosshairOptions](/lightweight-charts/docs/4.1/api/interfaces/CrosshairOptions)
* [CustomBarItemData](/lightweight-charts/docs/4.1/api/interfaces/CustomBarItemData)
* [CustomData](/lightweight-charts/docs/4.1/api/interfaces/CustomData)
* [CustomSeriesWhitespaceData](/lightweight-charts/docs/4.1/api/interfaces/CustomSeriesWhitespaceData)
* [CustomStyleOptions](/lightweight-charts/docs/4.1/api/interfaces/CustomStyleOptions)
* [GridLineOptions](/lightweight-charts/docs/4.1/api/interfaces/GridLineOptions)
* [GridOptions](/lightweight-charts/docs/4.1/api/interfaces/GridOptions)
* [HandleScaleOptions](/lightweight-charts/docs/4.1/api/interfaces/HandleScaleOptions)
* [HandleScrollOptions](/lightweight-charts/docs/4.1/api/interfaces/HandleScrollOptions)
* [HistogramData](/lightweight-charts/docs/4.1/api/interfaces/HistogramData)
* [HistogramStyleOptions](/lightweight-charts/docs/4.1/api/interfaces/HistogramStyleOptions)
* [HorzScaleOptions](/lightweight-charts/docs/4.1/api/interfaces/HorzScaleOptions)
* [IChartApi](/lightweight-charts/docs/4.1/api/interfaces/IChartApi)
* [IChartApiBase](/lightweight-charts/docs/4.1/api/interfaces/IChartApiBase)
* [ICustomSeriesPaneRenderer](/lightweight-charts/docs/4.1/api/interfaces/ICustomSeriesPaneRenderer)
* [ICustomSeriesPaneView](/lightweight-charts/docs/4.1/api/interfaces/ICustomSeriesPaneView)
* [IHorzScaleBehavior](/lightweight-charts/docs/4.1/api/interfaces/IHorzScaleBehavior)
* [IPriceFormatter](/lightweight-charts/docs/4.1/api/interfaces/IPriceFormatter)
* [IPriceLine](/lightweight-charts/docs/4.1/api/interfaces/IPriceLine)
* [IPriceScaleApi](/lightweight-charts/docs/4.1/api/interfaces/IPriceScaleApi)
* [ISeriesApi](/lightweight-charts/docs/4.1/api/interfaces/ISeriesApi)
* [ISeriesPrimitiveAxisView](/lightweight-charts/docs/4.1/api/interfaces/ISeriesPrimitiveAxisView)
* [ISeriesPrimitiveBase](/lightweight-charts/docs/4.1/api/interfaces/ISeriesPrimitiveBase)
* [ISeriesPrimitivePaneRenderer](/lightweight-charts/docs/4.1/api/interfaces/ISeriesPrimitivePaneRenderer)
* [ISeriesPrimitivePaneView](/lightweight-charts/docs/4.1/api/interfaces/ISeriesPrimitivePaneView)
* [ITimeScaleApi](/lightweight-charts/docs/4.1/api/interfaces/ITimeScaleApi)
* [KineticScrollOptions](/lightweight-charts/docs/4.1/api/interfaces/KineticScrollOptions)
* [LayoutOptions](/lightweight-charts/docs/4.1/api/interfaces/LayoutOptions)
* [LineData](/lightweight-charts/docs/4.1/api/interfaces/LineData)
* [LineStyleOptions](/lightweight-charts/docs/4.1/api/interfaces/LineStyleOptions)
* [LocalizationOptions](/lightweight-charts/docs/4.1/api/interfaces/LocalizationOptions)
* [LocalizationOptionsBase](/lightweight-charts/docs/4.1/api/interfaces/LocalizationOptionsBase)
* [MouseEventParams](/lightweight-charts/docs/4.1/api/interfaces/MouseEventParams)
* [OhlcData](/lightweight-charts/docs/4.1/api/interfaces/OhlcData)
* [PaneRendererCustomData](/lightweight-charts/docs/4.1/api/interfaces/PaneRendererCustomData)
* [PaneSize](/lightweight-charts/docs/4.1/api/interfaces/PaneSize)
* [Point](/lightweight-charts/docs/4.1/api/interfaces/Point)
* [PriceFormatBuiltIn](/lightweight-charts/docs/4.1/api/interfaces/PriceFormatBuiltIn)
* [PriceFormatCustom](/lightweight-charts/docs/4.1/api/interfaces/PriceFormatCustom)
* [PriceLineOptions](/lightweight-charts/docs/4.1/api/interfaces/PriceLineOptions)
* [PriceRange](/lightweight-charts/docs/4.1/api/interfaces/PriceRange)
* [PriceScaleMargins](/lightweight-charts/docs/4.1/api/interfaces/PriceScaleMargins)
* [PriceScaleOptions](/lightweight-charts/docs/4.1/api/interfaces/PriceScaleOptions)
* [PrimitiveHoveredItem](/lightweight-charts/docs/4.1/api/interfaces/PrimitiveHoveredItem)
* [Range](/lightweight-charts/docs/4.1/api/interfaces/Range)
* [SeriesAttachedParameter](/lightweight-charts/docs/4.1/api/interfaces/SeriesAttachedParameter)
* [SeriesDataItemTypeMap](/lightweight-charts/docs/4.1/api/interfaces/SeriesDataItemTypeMap)
* [SeriesMarker](/lightweight-charts/docs/4.1/api/interfaces/SeriesMarker)
* [SeriesOptionsCommon](/lightweight-charts/docs/4.1/api/interfaces/SeriesOptionsCommon)
* [SeriesOptionsMap](/lightweight-charts/docs/4.1/api/interfaces/SeriesOptionsMap)
* [SeriesPartialOptionsMap](/lightweight-charts/docs/4.1/api/interfaces/SeriesPartialOptionsMap)
* [SingleValueData](/lightweight-charts/docs/4.1/api/interfaces/SingleValueData)
* [SolidColor](/lightweight-charts/docs/4.1/api/interfaces/SolidColor)
* [TickMark](/lightweight-charts/docs/4.1/api/interfaces/TickMark)
* [TimeChartOptions](/lightweight-charts/docs/4.1/api/interfaces/TimeChartOptions)
* [TimeMark](/lightweight-charts/docs/4.1/api/interfaces/TimeMark)
* [TimeScaleOptions](/lightweight-charts/docs/4.1/api/interfaces/TimeScaleOptions)
* [TimeScalePoint](/lightweight-charts/docs/4.1/api/interfaces/TimeScalePoint)
* [TouchMouseEventData](/lightweight-charts/docs/4.1/api/interfaces/TouchMouseEventData)
* [TrackingModeOptions](/lightweight-charts/docs/4.1/api/interfaces/TrackingModeOptions)
* [VerticalGradientColor](/lightweight-charts/docs/4.1/api/interfaces/VerticalGradientColor)
* [WatermarkOptions](/lightweight-charts/docs/4.1/api/interfaces/WatermarkOptions)
* [WhitespaceData](/lightweight-charts/docs/4.1/api/interfaces/WhitespaceData)

## Type Aliases[​](#type-aliases "Direct link to Type Aliases")

* [AreaSeriesOptions](/lightweight-charts/docs/4.1/api/type-aliases/AreaSeriesOptions)
* [AreaSeriesPartialOptions](/lightweight-charts/docs/4.1/api/type-aliases/AreaSeriesPartialOptions)
* [AutoscaleInfoProvider](/lightweight-charts/docs/4.1/api/type-aliases/AutoscaleInfoProvider)
* [Background](/lightweight-charts/docs/4.1/api/type-aliases/Background)
* [BarPrice](/lightweight-charts/docs/4.1/api/type-aliases/BarPrice)
* [BarSeriesOptions](/lightweight-charts/docs/4.1/api/type-aliases/BarSeriesOptions)
* [BarSeriesPartialOptions](/lightweight-charts/docs/4.1/api/type-aliases/BarSeriesPartialOptions)
* [BaseValueType](/lightweight-charts/docs/4.1/api/type-aliases/BaseValueType)
* [BaselineSeriesOptions](/lightweight-charts/docs/4.1/api/type-aliases/BaselineSeriesOptions)
* [BaselineSeriesPartialOptions](/lightweight-charts/docs/4.1/api/type-aliases/BaselineSeriesPartialOptions)
* [CandlestickSeriesOptions](/lightweight-charts/docs/4.1/api/type-aliases/CandlestickSeriesOptions)
* [CandlestickSeriesPartialOptions](/lightweight-charts/docs/4.1/api/type-aliases/CandlestickSeriesPartialOptions)
* [ChartOptions](/lightweight-charts/docs/4.1/api/type-aliases/ChartOptions)
* [Coordinate](/lightweight-charts/docs/4.1/api/type-aliases/Coordinate)
* [CreatePriceLineOptions](/lightweight-charts/docs/4.1/api/type-aliases/CreatePriceLineOptions)
* [CustomSeriesOptions](/lightweight-charts/docs/4.1/api/type-aliases/CustomSeriesOptions)
* [CustomSeriesPartialOptions](/lightweight-charts/docs/4.1/api/type-aliases/CustomSeriesPartialOptions)
* [CustomSeriesPricePlotValues](/lightweight-charts/docs/4.1/api/type-aliases/CustomSeriesPricePlotValues)
* [DataChangedHandler](/lightweight-charts/docs/4.1/api/type-aliases/DataChangedHandler)
* [DataChangedScope](/lightweight-charts/docs/4.1/api/type-aliases/DataChangedScope)
* [DataItem](/lightweight-charts/docs/4.1/api/type-aliases/DataItem)
* [DeepPartial](/lightweight-charts/docs/4.1/api/type-aliases/DeepPartial)
* [HistogramSeriesOptions](/lightweight-charts/docs/4.1/api/type-aliases/HistogramSeriesOptions)
* [HistogramSeriesPartialOptions](/lightweight-charts/docs/4.1/api/type-aliases/HistogramSeriesPartialOptions)
* [HorzAlign](/lightweight-charts/docs/4.1/api/type-aliases/HorzAlign)
* [HorzScaleItemConverterToInternalObj](/lightweight-charts/docs/4.1/api/type-aliases/HorzScaleItemConverterToInternalObj)
* [ISeriesPrimitive](/lightweight-charts/docs/4.1/api/type-aliases/ISeriesPrimitive)
* [InternalHorzScaleItem](/lightweight-charts/docs/4.1/api/type-aliases/InternalHorzScaleItem)
* [InternalHorzScaleItemKey](/lightweight-charts/docs/4.1/api/type-aliases/InternalHorzScaleItemKey)
* [LineSeriesOptions](/lightweight-charts/docs/4.1/api/type-aliases/LineSeriesOptions)
* [LineSeriesPartialOptions](/lightweight-charts/docs/4.1/api/type-aliases/LineSeriesPartialOptions)
* [LineWidth](/lightweight-charts/docs/4.1/api/type-aliases/LineWidth)
* [Logical](/lightweight-charts/docs/4.1/api/type-aliases/Logical)
* [LogicalRange](/lightweight-charts/docs/4.1/api/type-aliases/LogicalRange)
* [LogicalRangeChangeEventHandler](/lightweight-charts/docs/4.1/api/type-aliases/LogicalRangeChangeEventHandler)
* [MouseEventHandler](/lightweight-charts/docs/4.1/api/type-aliases/MouseEventHandler)
* [Mutable](/lightweight-charts/docs/4.1/api/type-aliases/Mutable)
* [Nominal](/lightweight-charts/docs/4.1/api/type-aliases/Nominal)
* [OverlayPriceScaleOptions](/lightweight-charts/docs/4.1/api/type-aliases/OverlayPriceScaleOptions)
* [PercentageFormatterFn](/lightweight-charts/docs/4.1/api/type-aliases/PercentageFormatterFn)
* [PriceFormat](/lightweight-charts/docs/4.1/api/type-aliases/PriceFormat)
* [PriceFormatterFn](/lightweight-charts/docs/4.1/api/type-aliases/PriceFormatterFn)
* [PriceToCoordinateConverter](/lightweight-charts/docs/4.1/api/type-aliases/PriceToCoordinateConverter)
* [SeriesMarkerPosition](/lightweight-charts/docs/4.1/api/type-aliases/SeriesMarkerPosition)
* [SeriesMarkerShape](/lightweight-charts/docs/4.1/api/type-aliases/SeriesMarkerShape)
* [SeriesOptions](/lightweight-charts/docs/4.1/api/type-aliases/SeriesOptions)
* [SeriesPartialOptions](/lightweight-charts/docs/4.1/api/type-aliases/SeriesPartialOptions)
* [SeriesPrimitivePaneViewZOrder](/lightweight-charts/docs/4.1/api/type-aliases/SeriesPrimitivePaneViewZOrder)
* [SeriesType](/lightweight-charts/docs/4.1/api/type-aliases/SeriesType)
* [SizeChangeEventHandler](/lightweight-charts/docs/4.1/api/type-aliases/SizeChangeEventHandler)
* [TickMarkFormatter](/lightweight-charts/docs/4.1/api/type-aliases/TickMarkFormatter)
* [TickMarkWeightValue](/lightweight-charts/docs/4.1/api/type-aliases/TickMarkWeightValue)
* [Time](/lightweight-charts/docs/4.1/api/type-aliases/Time)
* [TimeFormatterFn](/lightweight-charts/docs/4.1/api/type-aliases/TimeFormatterFn)
* [TimePointIndex](/lightweight-charts/docs/4.1/api/type-aliases/TimePointIndex)
* [TimeRangeChangeEventHandler](/lightweight-charts/docs/4.1/api/type-aliases/TimeRangeChangeEventHandler)
* [UTCTimestamp](/lightweight-charts/docs/4.1/api/type-aliases/UTCTimestamp)
* [VertAlign](/lightweight-charts/docs/4.1/api/type-aliases/VertAlign)
* [VisiblePriceScaleOptions](/lightweight-charts/docs/4.1/api/type-aliases/VisiblePriceScaleOptions)

## Variables[​](#variables "Direct link to Variables")

* [customSeriesDefaultOptions](/lightweight-charts/docs/4.1/api/variables/customSeriesDefaultOptions)

## Functions[​](#functions "Direct link to Functions")

* [createChart](/lightweight-charts/docs/4.1/api/functions/createChart)
* [createChartEx](/lightweight-charts/docs/4.1/api/functions/createChartEx)
* [defaultHorzScaleBehavior](/lightweight-charts/docs/4.1/api/functions/defaultHorzScaleBehavior)
* [isBusinessDay](/lightweight-charts/docs/4.1/api/functions/isBusinessDay)
* [isUTCTimestamp](/lightweight-charts/docs/4.1/api/functions/isUTCTimestamp)
* [version](/lightweight-charts/docs/4.1/api/functions/version)